# tai

./: .gitignore  README.md  document_sorter.py  load_data.py  nodes_post_pipe.txt  pyproject.toml  query.py  sherpa_reader.py  testing_playground.ipynb
